--- a/views/partials/_menu.ejs
+++ b/views/partials/_menu.ejs
@@ -1,39 +1,45 @@
-<!-- header -->
-<header class="header-area">
-   <div class="container-fluid">
-      <div class="row ">
-        
-         <div class=" col-md-2 col-sm-3">
-            <div class="logo">
-               <a href="/">lens<br><span>light</span></a>
+   <!-- header -->
+   <header class="header-area">
+      <div class="container-fluid">
+         <div class="row ">
+           
+            <div class=" col-md-2 col-sm-3">
+               <div class="logo">
+                  <a href="/">lens<br><span>light</span></a>
+               </div>
             </div>
-         </div>
-         <div class="col-md-8 col-sm-9">
-            <div class="navbar-area">
-               <nav class="site-navbar">
-                  <ul>
-                     <li><a href="/">Home</a></li>
-                     <li><a  href="/about">About</a></li>
+            <div class="col-md-8 col-sm-9">
+               <div class="navbar-area">
+                  <nav class="site-navbar">
+                     <ul>
+                        <li><a href="/">Home</a></li>
+                        <li><a  href="/about">About</a></li>
 
-
-                     
-            
-                     
-
-
-
-                  </ul>
-                  <button class="nav-toggler">
-                  <span></span>
-                  </button>
-               </nav>
+                        
+  
+                        <% if (user) { %>
+  
+                          <li><a href="/logout">Logout</a></li>
+                          <li><a href="/users/dashboard">Dashboard</a></li>
+                       
+                       <% } else { %>
+                          <li><a href="/register">Register</a></li>
+                          <li><a href="/login">Login</a></li>
+                       <%  }%>
+  
+  
+                     </ul>
+                     <button class="nav-toggler">
+                     <span></span>
+                     </button>
+                  </nav>
+               </div>
             </div>
+            <!-- <div class=" col-md-2 di_none">
+              <ul class="email text_align_right"><li><a href="Javascript:void(0)">Login</a></li>
+              <li><a href="Javascript:void(0)"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+              </ul>
+            </div> -->
          </div>
-         <!-- <div class=" col-md-2 di_none">
-           <ul class="email text_align_right"><li><a href="Javascript:void(0)">Login</a></li>
-           <li><a href="Javascript:void(0)"><i class="fa fa-search" aria-hidden="true"></i></a></li>
-           </ul>
-         </div> -->
       </div>
-   </div>
-</header>
+   </header>
