--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,4 +1,5 @@
-<<%- include("partials/_header") %>
+<%- include("partials/_header") %>
+
 
    <!-- body -->
    <body class="main-layout inner_page">
@@ -8,9 +9,7 @@
       </div>
       <!-- end loader -->
      
-         <!-- header -->
-         <%- include("partials/_menu") %>
-
+      <%- include("partials/_menu") %>
       <!-- end header inner -->
       <!-- about -->
       <div class="about">
@@ -18,10 +17,9 @@
           <div class="row">
             <div class="col-md-6">
               <div class="titlepage text_align_left">
-                <span>01</span>
                 <h2>About Us</h2>
                 <p>Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model </p>
-                <a class="read_more" href="about.html">Read More</a>
+              
               </div>
             </div>
             <div class="col-md-6">
