--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,3 +1,4 @@
+
 <%- include("partials/_header") %>
 
    <!-- body -->
@@ -18,8 +19,7 @@
             <div class="row">
               <div class="col-md-12 ">
                 <div class="titlepage text_align_center">
-                  <span>06</span>
-                  <h2>Requste A Call Back</h2>
+                  <h2>Register</h2>
                 </div>
               </div>
               <div class="col-md-8 offset-md-2">
